--- a/Market_Mix_Modelling.ipynb
+++ b/Market_Mix_Modelling.ipynb
@@ -6,7 +6,7 @@
       "name": "Market-Mix-Modelling.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVbNwb2xO72V6L3RQEp33R"
+      "authorship_tag": "ABX9TyMJh/uOpXvC2MXaLKmUQOt1"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +14,50 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N4EQggk_bbXQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Market Mix Modelling\n",
+        "\n",
+        "Market Mix Modeling (MMM) is a technique which helps in quantifying the impact of several marketing inputs on sales or Market Share. The purpose of using MMM is to understand how much each marketing input contributes to sales, and how much to spend on each marketing input.\n",
+        "MMM helps in the ascertaining the effectiveness of each marketing input in terms of Return on Investment. In other words, a marketing input with higher return on Investment (ROI) is more effective as a medium than a marketing input with a lower ROI.\n",
+        "MMM uses the Regression technique and the analysis performed through Regression is further used for extracting key information/insights."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3maLQylXbn27",
+        "colab_type": "text"
+      },
+      "source": [
+        "An equation is formed between the dependent variables and predictors. This equation could be linear or non-linear depending on the relationship between the dependent variable and various marketing inputs. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XDah9Knqbomr",
+        "colab_type": "text"
+      },
+      "source": [
+        "$ y = \\beta_0 + \\beta_1*x_1 + \\beta_2*x_2 $"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9JWHte6yb8Ta",
+        "colab_type": "text"
+      },
+      "source": [
+        "The betas generated from Regression analysis, help in quantifying the impact of each of the inputs."
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
